Simle change to test if I can push

--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -410,7 +410,7 @@ information and a paper resume are available directly below.</p>
 					<li>
 						<a class="ns-img" href="images/SpottedCowPreview.jpeg"	></a>
 						<div class="caption">
-							<h3>Artistic</h3>
+							<h3>Handcrafted</h3>
 							<p>When I'm not busy with the 0s and 1s I enjoy making stuff with my hands.</p>
 						</div>
 					</li>
