--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -408,7 +408,7 @@ information and a paper resume are available directly below.</p>
 						</div>
 					</li>
 					<li>
-						<a class="ns-img" href="images/SpottedCowPreview.jpeg"	></a>
+						<a class="ns-img" href="images/SpottedCow.jpeg"	></a>
 						<div class="caption">
 							<h3>Handcrafted</h3>
 							<p>When I'm not busy with the 0s and 1s I enjoy making stuff with my hands.</p>
@@ -419,7 +419,7 @@ information and a paper resume are available directly below.</p>
 						<div class="caption">
 							<h3>Galaxy Conflicts</h3>
 							<p>I assisted in the creation of an HTC Vive demo for the LEL to display at ScienceFest.
-								I created the lightsaber on/off animation and the gap openings for death stars to appear from.</p>
+								I created the lightsaber on/off animation and the gap openings for "enemy ships" to appear from.</p>
 						</div>
 					</li>
 					<li>
@@ -435,18 +435,17 @@ information and a paper resume are available directly below.</p>
 					<li>
 						<a class="ns-img" href="images/BopIt.JPG"	></a>
 						<div class="caption">
-							<h3>Bop It Project</h3>
-							<p>A class project where you solder all elements onto the board, then program a game. I coded a two player
+							<h3>Bop It Game, Intro to Electrical Engineering</h3>
+							<p>A class project where we soldered all components onto the board, then programmed a game. I coded a two player
 							game where your given various instructions to flip switches, turn potentiometers or push buttons faster than your
 							opponent.</p>
 						</div>
 					</li>
 					<li>
-						<a class="ns-img" href="images/Table2Preview.jpeg"	></a>
+						<a class="ns-img" href="images/Table2.jpeg"	></a>
 						<div class="caption">
 							<h3>Summer Project</h3>
-							<p>What good is attending UW-Madison if you don't have a replica table of the Kohl Center for dining, studying, and
-								other various college kid activities?</p>
+							<p>No Badger apartment is complete without a replica table of the Kohl Center.</p>
 						</div>
 					</li>
 					<li>
@@ -454,6 +453,14 @@ information and a paper resume are available directly below.</p>
 						<div class="caption">
 							<h3>Intro to Engineering, Tractor Scoot</h3>
 							<p>I sharpened my 3D modelling skills by recreating our final project in Autodesk Inventor.</p>
+						</div>
+					</li>
+					<li>
+						<a class="ns-img" href="images/RemoteFinder.JPG"	></a>
+						<div class="caption">
+							<h3>Remote Finder, High School Engineering Project</h3>
+							<p>A senior project in Engineering Design. A home station that communicates with remotes in the home using radio
+								frequency, causing the remote to light up and beep to help the user find it.</p>
 						</div>
 					</li>
 				</ul>
@@ -472,9 +479,10 @@ information and a paper resume are available directly below.</p>
 		<img src="images/SpottedCowPreview.jpeg" onclick="lightbox(3)"style="width:200px;height:200px"   />
 		<img src="images/GalaxyConflicts.PNG" onclick="lightbox(4)"style="width:200px;height:200px"   />
 		<img src="images/ManagerReview.jpg" onclick="lightbox(5)"style="width:200px;height:200px" />
-		<img src="images/BopIt.JPG" onclick="lightbox(6)"style="width:200px;height:200px"   />	
+		<img src="images/BopItPreview.JPG" onclick="lightbox(6)"style="width:200px;height:200px"   />	
 		<img src="images/Table2Preview.jpeg" onclick="lightbox(7)"style="width:200px;height:200px"   />	
 		<img src="images/AsparagusModel1.JPG" onclick="lightbox(8)"style="width:200px;height:200px"   />
+		<img src="images/RemoteFinderPreview.jpg" onclick="lightbox(9)"style="width:200px;height:200px"	/>
 	</div>
 	</div>	
 
